Fix align timestamp

--- a/src/components/foreign-image/foreign-image.pcss
+++ b/src/components/foreign-image/foreign-image.pcss
@@ -14,7 +14,7 @@
     bottom: 18px;
     border-radius: 10px;
     width: 37px;
-    text-align: center;
+    text-align: center !important;
     font-size: 9px;
     padding: 1px 0;
   }
